--- a/css/index.css
+++ b/css/index.css
@@ -171,3 +171,65 @@ footer a {
 .contacto a:hover {
   color: mediumspringgreen;
 }
+
+/* style contacto */
+
+/* Estilos para el formulario de contacto */
+body {
+  font-family: cursive;
+  background-color: #f9f9f9;
+}
+
+/*
+p {
+  font-family: 'Times New Roman', Times, serif;
+  background-color: #f9f9f9;
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 8px;
+}
+*/
+#tit_form {
+  text-align: center;
+  color: #007bff;
+  margin-top: 15vh;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid lightslategray;
+  border-radius: 5px;
+  margin-bottom: 100px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+/*input[type="tel"],*/
+textarea {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+  padding: 10px;
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3
+}
