--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,12 @@
   src: url(../fonts/SedgwickAveDisplay-Regular.ttf);
 }
 
+/* Style header - navbar */
+
 a {
   text-decoration: none;
 }
+
 
 p {
   font-family: sedgwick;
@@ -71,21 +74,26 @@ navbar a {
   
   }
 
-  
-
-
 navbar a:hover {
   background-color: #ddd;
   color: black;
 }
-
+/* sticky le da estilo a chombas, contacto, index, jogging, remeras, ubicacion */
 .sticky {
   position: fixed;
   top: 0;
 }
 
+/* Style SECTION index */
+
+a {
+  text-decoration: none;
+}
+
 #contenido {
   padding-top: 30px;
+  margin-bottom: 50px;
+
 }
 
 #portada {
@@ -122,6 +130,33 @@ h1 {
   text-align: center;
   font-family: Sedgwick;
 }
+/* Style html chombas, remeras y jogging */
+
+p {
+  font-family: sedgwick;
+  text-align: center;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15vh;
+  justify-content: space-between;
+  margin-top: 30vh;
+}
+
+.main div img {
+  height: 300px;
+  border-radius: 8px;
+}
+
+/* Style html ubicacion */
+
+.mapa {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
 
 /* Style footer */
 
@@ -150,11 +185,7 @@ footer .linea2 {
   padding: 20px 0 10px;
 }
 
-.mapa {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
+
 
 .linea1 img {
   transition: all 0.2s ease-in-out;
@@ -162,23 +193,6 @@ footer .linea2 {
 
 .linea1 img:hover {
   transform: scale(1.5);
-}
-
-#contenido {
-  margin-bottom: 50px;
-}
-
-.main {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 15vh;
-  justify-content: space-between;
-  margin-top: 30vh;
-}
-
-.main div img {
-  height: 300px;
-  border-radius: 8px;
 }
 
 footer a {
